syntax = "proto3";
package beads.v1;
option go_package = "github.com/groblegark/kbeads/gen/beads/v1;beadsv1";

import "beads/v1/types.proto";

// SetConfigRequest creates or updates a config entry.
message SetConfigRequest {
  string key = 1;
  bytes value = 2;
}

// SetConfigResponse returns the saved config.
message SetConfigResponse {
  Config config = 1;
}

// GetConfigRequest retrieves a config by key.
message GetConfigRequest {
  string key = 1;
}

// GetConfigResponse returns a single config.
message GetConfigResponse {
  Config config = 1;
}

// ListConfigsRequest lists configs by namespace prefix.
message ListConfigsRequest {
  string namespace = 1;
}

// ListConfigsResponse returns a list of configs.
message ListConfigsResponse {
  repeated Config configs = 1;
}

// DeleteConfigRequest deletes a config by key.
message DeleteConfigRequest {
  string key = 1;
}

// DeleteConfigResponse is empty on success.
message DeleteConfigResponse {}
